css selected tags coins

--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -1013,7 +1013,7 @@ h3 {
 	line-height: 56px;
 	padding: 0 24px;
 	justify-content: space-between;
-	.coin_tag{
+	.coin_select_tag {
 		flex-grow: 0;
 	}
 	.btn-group {
