--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -1264,8 +1264,6 @@ h3 {
     			margin-right: 0;
 			}
 		}
-
-
 	}
 
 	.tools {
@@ -1471,6 +1469,8 @@ h3 {
 					transition: all 0.1s ease-in-out;
 					color: $dark-primary-color;
 				}
+
+
 			}
 		}
 	}
@@ -1585,6 +1585,20 @@ h3 {
 			margin: 24px 32px 0 24px;
 		}
 
+		.news_list_detail {
+			flex-wrap: wrap;
+			li {
+				margin: 0;
+				width: auto;
+				margin-right: 12px;
+				&.post_detail_coins {
+					width: 100%;
+					max-width: 100%;
+					margin-bottom: 6px;
+				}
+			}
+		}
+
 		.tools {
 			margin: 24px 32px 0 24px;
 			.tools_left {
@@ -1600,6 +1614,30 @@ h3 {
 			}
 			.social {
 				text-align: center;
+			}
+		}
+
+
+		.similar_list_wrap {
+			.similar_list {
+				.similar_item {
+					padding: 0;
+					margin-right: 24px;
+					border: none;
+					.similar_image {
+						height: 36px;
+					}
+					.item_title {
+						font-size: 14px;
+						font-weight: 100;
+					}
+					.item_body {
+						display: none;
+					}
+					&:last-child {
+						margin-right: 0;
+					}
+				}
 			}
 		}
 	}
@@ -2244,20 +2282,45 @@ h3 {
 	}
 }
 
-.ff_authors {
+.ff_page {
 	margin: 0 auto;
 	width: 75%;
 	padding-bottom: 120px;
+	padding-top: 36px;
+
+	ul, li {
+		list-style: none;
+	}
+}
+
+.ff_disclaimer {
+	@extend .ff_page;
+	ul, li {
+		list-style: decimal;
+		margin-top: 12px;
+	}
+	& > ul {
+		margin: 0; 
+		padding: 0;
+	}
+}
+.ff_privacy, .ff_terms {
+	@extend .ff_page;
+	& > ul {
+		margin: 0; 
+		padding: 0;
+	}
+	ul > ul > li{
+		list-style: disc;
+	}
 }
 .ff_contacts {
-	margin: 0 auto;
-	width: 75%;
-	padding-bottom: 120px;
+	@extend .ff_page;
 	.contact_row {
 		display: flex;
 		dt {
 			flex-grow: 0;
-			width: 45px;
+			width: 60px;
 			font-size: $label-size;
 			color: $label-color;
 		}
@@ -2267,5 +2330,7 @@ h3 {
 		}
 	}
 }
+
+
 
 
