fix searcj height

--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -848,6 +848,7 @@ h3 {
 			border: none;
 			background: transparent url('~assets/images/ic_search.svg') 100% 50% no-repeat;
 			padding-right: 36px;
+			line-height: 24px;
 			&:focus {
 				outline: none;
 			}
