--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -190,6 +190,13 @@ h3 {
 		background-image: url('~assets/images/ic_star.svg');
 	}
 }
+.ic_telegram_white {
+	//background: transparent url('~assets/images/ic_star_border.svg') center center no-repeat;
+	background-image: url('~assets/images/telegram_white.svg');
+	width: 12px;
+	height: 12px;
+	display: inline-flex;
+}
 
 .button_link {
 	display: block;
@@ -297,6 +304,39 @@ h3 {
 			}
 		}
 	}
+}
+
+#showImgBgr {
+	top: 0;
+	left:0;
+	background-color: #000;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	opacity: 0.4;
+	z-index: 10005;
+}
+
+#showImgContainer {
+	position: absolute;
+	z-index: 10005;
+	top:0;
+	padding: 10px;
+	width:100%;
+	height:100%;
+    cursor: pointer;
+
+    img {
+        //width: 100%;
+        max-width: 100%;
+        max-height: 100%;
+        display: block;
+        margin: 0;
+        position: relative;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
 }
 
 /* social block */
@@ -547,16 +587,47 @@ h3 {
 		color: $link-color;
 		transition: color 0.2s ease-in-out;
 	}
+
+	.tg_banner_2 {
+		position: relative;
+		top: 7px;
+		padding:0 16px;
+		color: $l-color;
+		small {
+			font-size: 11px;
+			letter-spacing: normal;
+		}
+		.ic_telegram_white {
+			margin-right: 8px;
+			width: 20px;
+			height: 20px;
+		}
+		.text {
+			font-size: 18px;
+			line-height: 12px;
+			display: inline-block;
+			letter-spacing: 2.2px;
+		}
+	}
+
+	.tg_banner_2:hover {
+		color: $post-top-color;
+	}
 }
 @media (max-width: 769px) {
 	.ff-toolbar {
 		nav {
 			.nav-link {
+				display: none;
 				padding: 0 10px 0 0;
 			}
 		}
 		.ff_account_menu {
 			display: none;
+		}
+		.tg_banner_2 {
+			top: 4px;
+			padding: 0;
 		}
 	}
 }
@@ -1301,6 +1372,7 @@ h3 {
 		@extend .content_width;
 		img {
 			width: 100%;
+			cursor: pointer;
 		}
 		a {
 			text-decoration: underline;
