--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -462,9 +462,8 @@ h3 {
 
 						position: absolute;
     					bottom: 0;
-    					height: 50%;
-/*    					top: 100px;
-*/    					background-color: $bg-main-color;
+    					top: 100px;
+    					background-color: $bg-main-color;
     					border-top: 1px solid $border-bold-color;
     					margin-top: -1px;
 					}
